@@ -454,8 +454,7 @@ class ServerManager implements HConstants {
           break;
 
         case MSG_REPORT_SPLIT:
-          processSplitRegion(serverInfo, region, incomingMsgs[++i],
-            incomingMsgs[++i]);
+          processSplitRegion(region, incomingMsgs[++i], incomingMsgs[++i]);
           break;
 
         default:
@@ -497,26 +496,18 @@ class ServerManager implements HConstants {
    * @param splitB
    * @param returnMsgs
    */
-  private void processSplitRegion(final HServerInfo si, final HRegionInfo region,
-      final HMsg splitA, final HMsg splitB) {
+  private void processSplitRegion(HRegionInfo region, HMsg splitA, HMsg splitB) {
     synchronized (master.regionManager) {
       // Cancel any actions pending for the affected region.
       // This prevents the master from sending a SPLIT message if the table
       // has already split by the region server. 
-      this.master.regionManager.endActions(region.getRegionName());
-      // Region A is now opened immediately on the splitting server.  The message
-      // that its been successfully opened is probably just behind this split
-      // message.  Set up the master state so that its properly primed for the
-      // coming open message.
-      HRegionInfo a = splitA.getRegionInfo();
-      assignSplitDaughter(a);
-      this.master.regionManager.doRegionAssignment(a.getRegionNameAsString(), si);
-      // Region B will be assigned old-school style by the master.
+      master.regionManager.endActions(region.getRegionName());
+      assignSplitDaughter(splitA.getRegionInfo());
       assignSplitDaughter(splitB.getRegionInfo());
       if (region.isMetaTable()) {
         // A meta region has split.
-        this.master.regionManager.offlineMetaRegion(region.getStartKey());
-        this.master.regionManager.incrementNumMetaRegions();
+        master.regionManager.offlineMetaRegion(region.getStartKey());
+        master.regionManager.incrementNumMetaRegions();
       }
     }
   }
@@ -587,7 +578,7 @@ class ServerManager implements HConstants {
       if (duplicateAssignment) {
         if (LOG.isDebugEnabled()) {
           LOG.debug("region server " + serverInfo.getServerAddress().toString()
-            + " should not have opened region " + Bytes.toString(region.getRegionName()));
+              + " should not have opened region " + Bytes.toString(region.getRegionName()));
         }
 
         // This Region should not have been opened.
