@@ -46,6 +46,7 @@ Release 0.20.1 - Unreleased
                hbase-1784)
    HBASE-1831  Scanning API must be reworked to allow for fully functional
                Filters client-side
+   HBASE-1890  hbase-1506 where assignment is done at regionserver doesn't work
 
   IMPROVEMENTS
    HBASE-1819  Update to 0.20.1 hadoop and zk 3.2.1
